[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/TestScripts/ZombieHolder.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="PrismMesh" id=3]
material = SubResource( 2 )
size = Vector3( 1, 2, 0.5 )

[sub_resource type="CapsuleShape" id=4]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.736766, 0.739672, 0.642318 )

[sub_resource type="SphereShape" id=6]
radius = 11.4148

[sub_resource type="SphereShape" id=7]
radius = 1.61538

[sub_resource type="SphereShape" id=8]
radius = 28.8693

[node name="ZombieHolder" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.65, 0, 0, 0, -3.0598e-008, 0.7, 0, -0.65, -2.84124e-008, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.725596, 0.73172 )
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.65, 0, 0, 0, -3.0598e-008, 0.7, 0, -0.65, -2.84124e-008, 0, 1, 0 )
shape = SubResource( 4 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.65, 0, 0, 0, 0.7, 0, 0, 0, 0.65, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.256593, -1.87176 )
shape = SubResource( 5 )

[node name="Detect_Area" type="Area" parent="."]
transform = Transform( 0.65, 0, 0, 0, 0.7, 0, 0, 0, 0.65, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Detect_Area"]
shape = SubResource( 6 )

[node name="Attack_Area" type="Area" parent="."]
transform = Transform( 0.65, 0, 0, 0, 0.7, 0, 0, 0, 0.65, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Attack_Area"]
shape = SubResource( 7 )

[node name="Map_Area" type="Area" parent="."]
transform = Transform( 0.65, 0, 0, 0, 0.7, 0, 0, 0, 0.65, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Map_Area"]
shape = SubResource( 8 )

[connection signal="body_entered" from="Detect_Area" to="." method="_on_Detect_Area_body_entered"]
[connection signal="body_exited" from="Detect_Area" to="." method="_on_Detect_Area_body_exited"]
[connection signal="body_entered" from="Attack_Area" to="." method="_on_Attack_Area_body_entered"]
[connection signal="body_exited" from="Attack_Area" to="." method="_on_Attack_Area_body_exited"]
[connection signal="body_entered" from="Map_Area" to="." method="_on_Map_Area_body_entered"]
[connection signal="body_exited" from="Map_Area" to="." method="_on_Map_Area_body_exited"]
